--- a/navigation_app/app/src/main/res/values/colors.xml
+++ b/navigation_app/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
 
 
     <color name="color_background">#eeeeee</color>
-    <color name="color_surface">#90a4ae</color>
+    <color name="color_surface">#D4E2EA</color>
     <color name="color_error">#dd2c00</color>
 
 
