--- a/firebase/app/src/main/res/layout/activity_producto.xml
+++ b/firebase/app/src/main/res/layout/activity_producto.xml
@@ -6,4 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".ui.ProductoActivitiy">
 
+    <TextView
+        android:text="PRODUTOS ACTIVITY"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/close_sesion"
+        android:text="Cerrar sesion"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
