--- a/firebase/app/src/main/res/menu/activity_main_drawer.xml
+++ b/firebase/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,5 +8,9 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
+        <item
+            android:id="@+id/favsFragment"
+            android:icon="@drawable/ic_baseline_favorite_24"
+            android:title="Favortios" />
     </group>
 </menu>
