--- a/firebase/app/src/main/res/values/colors.xml
+++ b/firebase/app/src/main/res/values/colors.xml
@@ -30,4 +30,6 @@
     <color name="transparent">#00000000</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#818080</color>
+    <color name="red">#dd2c00</color>
 </resources>
